--- a/views/share/footer.pug
+++ b/views/share/footer.pug
@@ -13,4 +13,4 @@ div(class="container-fluid bg-light text-dark")
                     a(href="/donate" class="btn btn-outline-success " style="width:77%") 捐赠
             div(class="row pt-3")
                 div(class="col-12 text-center")
-                    p &copy; 2017 Copyright : <a href="https://awesomejs.org"> 大脑艾瑞克 </a>
+                    p &copy; 2017 Copyright : <a href="https://awesomejs.org"> 大脑艾瑞克 </a> <a href="https://github.com/xczizz"> xczizz </a>
