--- a/views/share/footer.pug
+++ b/views/share/footer.pug
@@ -13,5 +13,4 @@ div(class="container-fluid bg-light text-dark")
                     a(href="/donate" class="btn btn-outline-success " style="width:77%") 捐赠
             div(class="row pt-3")
                 div(class="col-12 text-center")
-                    p &copy; 2017 Copyright : <a href="https://awesomejs.org"> 大脑艾瑞克 </a> ; <a href="https://github.com/xczizz"> xczizz </a> ; <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=cc1974f38d2f7c2c85358d2ef7a5e1822bb8f10346e0d1e5b0af571f52f4e147">加入我们</a>
-                    p <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=cc1974f38d2f7c2c85358d2ef7a5e1822bb8f10346e0d1e5b0af571f52f4e147"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="LannisterPay开发组" title="加入LannisterPay开发组"></a>
+                    p &copy; 2017 Copyright : <a href="https://awesomejs.org"> 大脑艾瑞克 </a> ; <a href="https://github.com/xczizz"> xczizz </a> ; <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=cc1974f38d2f7c2c85358d2ef7a5e1822bb8f10346e0d1e5b0af571f52f4e147"><img border="0" src="//pub.idqqimg.com/wpa/images/group.png" alt="LannisterPay开发组" title="加入LannisterPay开发组"></a>
