--- a/views/index/list.pug
+++ b/views/index/list.pug
@@ -23,4 +23,8 @@ html
                         th(scope="row") Coin
                         td 比特币等加密币
                         td <a class="btn btn-outline-success btn-block" href="/coin" role="button">Coin</a>
+                    tr(class="table-info")
+                        th(scope="row") IoT
+                        td 物联网设备的付费使用
+                        td <a class="btn btn-outline-success btn-block" href="/iot" role="button">IoT</a>
         include ../share/footer
